Fix currency calulaction and block validation bugs

--- a/trustchain-trader/src/main/res/layout/fragment_transfer.xml
+++ b/trustchain-trader/src/main/res/layout/fragment_transfer.xml
@@ -138,6 +138,11 @@
             android:layout_gravity="end"
             android:text="Send" />
 
+        <TextView
+            android:id="@+id/txtBalance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
