--- a/demo-android/src/main/res/layout/fragment_bitcoin.xml
+++ b/demo-android/src/main/res/layout/fragment_bitcoin.xml
@@ -36,6 +36,12 @@
                 android:layout_height="wrap_content" />
 
             <TextView
+                android:id="@+id/walletSeed"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=" " />
+
+            <TextView
                 android:id="@+id/chosenNetwork"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -70,22 +76,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/textView7"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Balance of whole wallet:" />
-
-                    <TextView
-                        android:id="@+id/balanceTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:text="0.0BTC"
-                        android:textAlignment="center" />
-                </LinearLayout>
+                    android:orientation="horizontal"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
