--- a/demo-android/src/main/res/layout/fragment_bitcoin.xml
+++ b/demo-android/src/main/res/layout/fragment_bitcoin.xml
@@ -7,112 +7,169 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="20px">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/sending_bitcoins"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="20px">
 
             <TextView
-                android:id="@+id/walletStatus"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=" " />
-
-            <TextView
-                android:id="@+id/walletBalance"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/walletSeed"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text=" " />
-
-            <TextView
-                android:id="@+id/chosenNetwork"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text=" " />
-
-            <Button
-                android:id="@+id/startWalletButtonExisting"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Start Wallet (load existing)" />
-
-            <Button
-                android:id="@+id/startWalletButtonImportDefaultKey"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Start Wallet (import default key)" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:baselineAligned="false"
-            android:gravity="bottom"
-            android:orientation="vertical">
+                android:text="@string/sending_bitcoins"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <LinearLayout
+                <TextView
+                    android:id="@+id/walletStatus"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"/>
+                    android:layout_height="wrap_content"
+                    android:text="Status: N/A" />
+
+                <TextView
+                    android:id="@+id/walletBalance"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Bitcoin available: N/A" />
+
+                <TextView
+                    android:id="@+id/walletSeed"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Seed: N/A" />
+
+                <TextView
+                    android:id="@+id/chosenNetwork"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Network: N/A" />
+
+                <TextView
+                    android:id="@+id/yourPublicHex"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Public Key:" />
+
+                <Button
+                    android:id="@+id/startWalletButtonExisting"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Start Wallet (load existing)" />
+
+                <Button
+                    android:id="@+id/startWalletButtonImportDefaultKey"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Start Wallet (import default key)" />
+
+                <Button
+                    android:id="@+id/generateRandomHexes"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Generate Random Hexes" />
+
+                <Button
+                    android:id="@+id/createMultisig"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Create Multisig" />
+
+                <EditText
+                    android:id="@+id/publicKeyHexes"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:gravity="start|top"
+                    android:hint="Public key hexes here (1 per line)"
+                    android:inputType="textMultiLine" />
+
+                <EditText
+                    android:id="@+id/threshHoldText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Threshhold"
+                    android:inputType="textPersonName" />
+
+                <EditText
+                    android:id="@+id/coinValue"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Satoshi amount (entrance fee)"
+                    android:inputType="textPersonName" />
+
+                <EditText
+                    android:id="@+id/multisigOutputText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Transaction ID (result)"
+                    android:inputType="textPostalAddress" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:baselineAligned="false"
+                android:gravity="bottom"
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                    </LinearLayout>
+
+                    <Button
+                        android:id="@+id/refreshButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Refresh" />
+
+                    <Button
+                        android:id="@+id/create_wallet_button"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Create Shared Bitcoin Wallet" />
 
                 </LinearLayout>
 
                 <Button
-                    android:id="@+id/refreshButton"
+                    android:id="@+id/show_wallet_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Refresh" />
+                    android:text="Your Shared Bitcoin Wallets" />
 
                 <Button
-                    android:id="@+id/create_wallet_button"
+                    android:id="@+id/search_wallet_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Create Shared Bitcoin Wallet" />
+                    android:text="Join Shared Bitcoin Wallet" />
 
             </LinearLayout>
 
-            <Button
-                android:id="@+id/show_wallet_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Your Shared Bitcoin Wallets" />
-
-            <Button
-                android:id="@+id/search_wallet_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Join Shared Bitcoin Wallet" />
-
         </LinearLayout>
-
-    </LinearLayout>
+    </ScrollView>
 
 </FrameLayout>
