Add download progress screen

--- a/demo-android/src/main/res/navigation/nav_graph.xml
+++ b/demo-android/src/main/res/navigation/nav_graph.xml
@@ -69,4 +69,9 @@
         android:name="nl.tudelft.ipv8.android.demo.ui.bitcoin.CreateSWFragment"
         android:label="fragment_create_sw"
         tools:layout="@layout/fragment_create_sw" />
+    <fragment
+        android:id="@+id/blockchainDownloading"
+        android:name="nl.tudelft.ipv8.android.demo.ui.bitcoin.BlockchainDownloading"
+        android:label="fragment_blockchain_downloading"
+        tools:layout="@layout/fragment_blockchain_downloading" />
 </navigation>
