--- a/demo-android/src/main/res/navigation/nav_graph.xml
+++ b/demo-android/src/main/res/navigation/nav_graph.xml
@@ -53,7 +53,36 @@
         android:id="@+id/bitcoinFragment"
         android:name="nl.tudelft.ipv8.android.demo.ui.bitcoin.BitcoinFragment"
         android:label="Bitcoin Overview"
-        tools:layout="@layout/fragment_bitcoin" />
+        tools:layout="@layout/fragment_bitcoin" >
+        <action
+            android:id="@+id/action_bitcoinFragment_to_blockchainDownloadFragment"
+            app:destination="@id/blockchainDownloadFragment"
+            app:enterAnim="@anim/fragment_fade_enter"
+            app:exitAnim="@anim/fragment_fade_exit"
+            app:popEnterAnim="@anim/fragment_fade_enter"
+            app:popExitAnim="@anim/fragment_fade_exit" />
+        <action
+            android:id="@+id/action_bitcoinFragment_to_createSWFragment"
+            app:destination="@id/createSWFragment"
+            app:enterAnim="@anim/fragment_fade_enter"
+            app:exitAnim="@anim/fragment_fade_exit"
+            app:popEnterAnim="@anim/fragment_fade_enter"
+            app:popExitAnim="@anim/fragment_fade_exit" />
+        <action
+            android:id="@+id/action_bitcoinFragment_to_joinNetworkFragment"
+            app:destination="@id/joinNetworkFragment"
+            app:enterAnim="@anim/fragment_fade_enter"
+            app:exitAnim="@anim/fragment_fade_exit"
+            app:popEnterAnim="@anim/fragment_fade_enter"
+            app:popExitAnim="@anim/fragment_fade_exit" />
+        <action
+            android:id="@+id/action_bitcoinFragment_to_mySharedWalletsFragment"
+            app:destination="@id/mySharedWalletsFragment"
+            app:enterAnim="@anim/fragment_fade_enter"
+            app:exitAnim="@anim/fragment_fade_exit"
+            app:popEnterAnim="@anim/fragment_fade_enter"
+            app:popExitAnim="@anim/fragment_fade_exit" />
+    </fragment>
     <fragment
         android:id="@+id/joinNetworkFragment"
         android:name="nl.tudelft.ipv8.android.demo.ui.bitcoin.JoinNetworkFragment"
@@ -70,13 +99,21 @@
         android:label="fragment_create_sw"
         tools:layout="@layout/fragment_create_sw" />
     <fragment
-        android:id="@+id/blockchainDownloading"
-        android:name="nl.tudelft.ipv8.android.demo.ui.bitcoin.BlockchainDownloading"
-        android:label="fragment_blockchain_downloading"
-        tools:layout="@layout/fragment_blockchain_downloading" />
+        android:id="@+id/blockchainDownloadFragment"
+        android:name="nl.tudelft.ipv8.android.demo.ui.bitcoin.BlockchainDownloadFragment"
+        android:label="fragment_blockchain_download"
+        android:layout="@layout/fragment_blockchain_download">
+        <action
+            android:id="@+id/action_blockchainDownloadFragment_to_bitcoinFragment"
+            app:destination="@id/bitcoinFragment"
+            app:enterAnim="@anim/fragment_fade_enter"
+            app:exitAnim="@anim/fragment_fade_exit"
+            app:popEnterAnim="@anim/fragment_fade_enter"
+            app:popExitAnim="@anim/fragment_fade_exit" />
+    </fragment>
     <fragment
         android:id="@+id/mySharedWalletsFragment"
-        android:name="nl.tudelft.ipv8.android.demo.ui.bitcoin.MySharedWalletsFragment"
+        android:name="nl.tudelft.ipv8.android.demo.ui.bitcoin.MySharedWalletFragment"
         android:label="fragment_my_shared_wallets"
         tools:layout="@layout/fragment_my_shared_wallets" />
 </navigation>
