--- a/demo-android/src/main/res/layout/fragment_blockchain_download.xml
+++ b/demo-android/src/main/res/layout/fragment_blockchain_download.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".BlockchainDownloading">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/textView4"
@@ -50,12 +48,12 @@
 
         <ProgressBar
             android:id="@+id/bitcoin_download_progress"
-            style="?android:attr/progressBarStyle"
+            style="?android:progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="500dp"
             android:max="100"
-            android:minHeight="60dp"
-            android:progress="10" />
+            android:progress="10"
+            android:progressDrawable="@drawable/progress_circle"/>
 
     </LinearLayout>
 </FrameLayout>
