--- a/demo-android/src/main/res/navigation/nav_graph.xml
+++ b/demo-android/src/main/res/navigation/nav_graph.xml
@@ -89,19 +89,14 @@
         android:label="Join Shared Wallet"
         tools:layout="@layout/fragment_join_network" />
     <fragment
-        android:id="@+id/landingBitcoinFragment"
-        android:name="nl.tudelft.ipv8.android.demo.ui.bitcoin.LandingBitcoinFragment"
-        android:label="Bitcoin Overview"
-        tools:layout="@layout/fragment_landing_bitcoin" />
-    <fragment
         android:id="@+id/createSWFragment"
         android:name="nl.tudelft.ipv8.android.demo.ui.bitcoin.CreateSWFragment"
-        android:label="fragment_create_sw"
+        android:label="Create New Shared Wallet"
         tools:layout="@layout/fragment_create_sw" />
     <fragment
         android:id="@+id/blockchainDownloadFragment"
         android:name="nl.tudelft.ipv8.android.demo.ui.bitcoin.BlockchainDownloadFragment"
-        android:label="fragment_blockchain_download"
+        android:label="Bitcoin Download Progress"
         android:layout="@layout/fragment_blockchain_download">
         <action
             android:id="@+id/action_blockchainDownloadFragment_to_bitcoinFragment"
@@ -114,6 +109,32 @@
     <fragment
         android:id="@+id/mySharedWalletsFragment"
         android:name="nl.tudelft.ipv8.android.demo.ui.bitcoin.MySharedWalletFragment"
-        android:label="fragment_my_shared_wallets"
-        tools:layout="@layout/fragment_my_shared_wallets" />
+        android:label="My Shared Wallets"
+        tools:layout="@layout/fragment_my_shared_wallets" >
+        <action
+            android:id="@+id/action_mySharedWalletsFragment_to_sharedWalletTransaction"
+            app:destination="@id/sharedWalletTransaction"
+            app:enterAnim="@anim/fragment_fade_enter"
+            app:exitAnim="@anim/fragment_fade_exit"
+            app:popEnterAnim="@anim/fragment_fade_enter"
+            app:popExitAnim="@anim/fragment_fade_exit" />
+    </fragment>
+    <fragment
+        android:id="@+id/sharedWalletTransaction"
+        android:name="nl.tudelft.ipv8.android.demo.ui.bitcoin.SharedWalletTransaction"
+        android:label="fragment_shared_wallet_transaction"
+        tools:layout="@layout/fragment_shared_wallet_transaction" >
+        <argument
+            android:name="publicKey"
+            app:argType="string" />
+        <argument
+            android:name="votingThreshold"
+            app:argType="integer" />
+        <argument
+            android:name="entranceFee"
+            app:argType="long" />
+        <argument
+            android:name="users"
+            app:argType="integer" />
+    </fragment>
 </navigation>
