--- a/demo-android/src/main/res/layout/fragment_my_shared_wallets.xml
+++ b/demo-android/src/main/res/layout/fragment_my_shared_wallets.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -15,13 +14,13 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Your Bitcoin Shared Wallets"
+            android:text="My Bitcoin Shared Wallets"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Overview of your Bitcoin Shared Wallets" />
+            android:text="Overview of My Bitcoin Shared Wallets" />
 
         <ListView
             android:id="@+id/list_view"
