--- a/demo-android/src/main/res/layout/fragment_import_keys.xml
+++ b/demo-android/src/main/res/layout/fragment_import_keys.xml
@@ -35,7 +35,7 @@
                 android:id="@+id/pk_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Public Key" />
+                android:hint="Address" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
