--- a/demo-android/src/main/res/layout/import_key_dialog.xml
+++ b/demo-android/src/main/res/layout/import_key_dialog.xml
@@ -12,10 +12,10 @@
         android:layout_height="match_parent">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/public_key_input"
+            android:id="@+id/address_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter Public Key"
+            android:hint="Enter Address"
             android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
