--- a/trustchain-trader/src/main/res/layout/fragment_ai_history.xml
+++ b/trustchain-trader/src/main/res/layout/fragment_ai_history.xml
@@ -11,9 +11,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="start"
         android:text="@string/machine_learning_overview"
-        android:textAlignment="center"
+        android:textAlignment="viewStart"
         android:textSize="18sp"
         android:padding="20sp"
         android:textStyle="bold" />
