--- a/trustchain-trader/src/main/res/menu/bottom_navigation_menu_trader.xml
+++ b/trustchain-trader/src/main/res/menu/bottom_navigation_menu_trader.xml
@@ -5,7 +5,10 @@
         android:id="@+id/traderFragment"
         android:title="Trader"
         android:icon="@drawable/ic_person_black_24dp" />
-
+    <item
+        android:id="@+id/AI_HistoryFragment"
+        android:icon="@android:drawable/ic_dialog_info"
+        android:title="AI History" />
     <item
         android:id="@+id/transferFragment"
         android:title="Transfer"
@@ -14,4 +17,9 @@
         android:id="@+id/peerFragment"
         android:title="Peers"
         android:icon="@drawable/ic_device_hub_black_24dp" />
+    <item
+        android:id="@+id/blocksFragment"
+        android:title="Market Blocks"
+        android:icon="@drawable/ic_grid_on_black_24dp" />
+
 </menu>
