--- a/trustchain-trader/src/main/res/navigation/nav_graph_trader.xml
+++ b/trustchain-trader/src/main/res/navigation/nav_graph_trader.xml
@@ -15,6 +15,9 @@
             app:destination="@id/AI_HistoryFragment"
             app:enterAnim="@anim/fragment_fade_enter"
             app:exitAnim="@anim/fragment_fade_exit" />
+        <action
+            android:id="@+id/action_traderFragment_to_blocksFragment"
+            app:destination="@id/blocksFragment" />
     </fragment>
 
     <fragment
@@ -25,6 +28,9 @@
         <action
             android:id="@+id/action_peerFragment_to_transferFragment"
             app:destination="@id/transferFragment" />
+        <action
+            android:id="@+id/action_peerFragment_to_blocksFragment"
+            app:destination="@id/blocksFragment" />
     </fragment>
 
     <fragment
@@ -84,4 +90,9 @@
             app:enterAnim="@anim/fragment_close_enter"
             app:exitAnim="@anim/fragment_close_exit" />
     </fragment>
+    <fragment
+        android:id="@+id/blocksFragment"
+        tools:layout="@layout/fragment_blocks"
+        android:name="nl.tudelft.trustchain.trader.ui.trader_blocks.BlocksFragment"
+        android:label="Market Blocks" />
 </navigation>
