--- a/trustchain-trader/src/main/res/layout/fragment_trader.xml
+++ b/trustchain-trader/src/main/res/layout/fragment_trader.xml
@@ -1,29 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.TraderFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".ui.TraderFragment">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal"
-        android:text="Wallet"
-        android:textAlignment="center"
-        android:textSize="18sp"
+        android:layout_gravity="start"
         android:padding="20sp"
+        android:text="Wallet"
+        android:textAlignment="viewStart"
+        android:textSize="18sp"
         android:textStyle="bold" />
+
+    <Switch
+        android:id="@+id/switchTrader"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="Trader"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/Wallet"
-        android:gravity="top"
-        android:layout_marginTop="60dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        android:gravity="top"
         android:orientation="horizontal"
         android:weightSum="4">
 
@@ -53,8 +62,8 @@
             android:layout_weight="1"
             android:paddingHorizontal="0dp"
             android:paddingVertical="40dp"
-            android:textAlignment="textStart"
             android:text="Tribler Bandwidth:"
+            android:textAlignment="textStart"
             android:textSize="12sp" />
 
         <TextView
@@ -68,6 +77,7 @@
             android:textSize="14sp" />
 
     </LinearLayout>
+
     <View
         android:id="@+id/divider"
         android:layout_width="match_parent"
@@ -88,11 +98,12 @@
 
     <LinearLayout
         android:id="@+id/Transactions"
-        android:gravity="top"
-        android:layout_marginTop="165dp"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="165dp"
+        android:gravity="top"
+        android:orientation="vertical">
+
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
