--- a/trustchain-trader/src/main/res/menu/bottom_navigation_menu_trader.xml
+++ b/trustchain-trader/src/main/res/menu/bottom_navigation_menu_trader.xml
@@ -17,5 +17,9 @@
         android:id="@+id/peerFragment"
         android:title="Peers"
         android:icon="@drawable/ic_device_hub_black_24dp" />
+    <item
+        android:id="@+id/blocksFragment"
+        android:title="Market Blocks"
+        android:icon="@drawable/ic_grid_on_black_24dp" />
 
 </menu>
