--- a/trustchain-payloadgenerator/src/main/res/navigation/nav_graph_payloadgenerator.xml
+++ b/trustchain-payloadgenerator/src/main/res/navigation/nav_graph_payloadgenerator.xml
@@ -4,13 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     app:startDestination="@id/payloadFragment">
-    <fragment
-        android:id="@+id/blocksFragment2"
-        android:name="nl.tudelft.trustchain.payloadgenerator.ui.blocks.BlocksFragment"
-        android:label="BlocksFragment" />
 
     <fragment
         android:id="@+id/payloadFragment"
-        android:name="nl.tudelft.trustchain.payloadgenerator.ui.PayloadFragment"
-        android:label="PayloadFragment" />
+        android:name="nl.tudelft.trustchain.payloadgenerator.ui.payload.PayloadFragment"
+        android:label="PayloadFragment" >
+        <action
+            android:id="@+id/action_payloadFragment_to_payloadCreateFragment"
+            app:destination="@id/payloadCreateFragment"
+            app:enterAnim="@anim/fragment_fade_enter"
+            app:exitAnim="@anim/fragment_close_exit" />
+    </fragment>
+    <fragment
+        android:id="@+id/payloadCreateFragment"
+        android:name="nl.tudelft.trustchain.payloadgenerator.ui.payload.PayloadCreateFragment"
+        android:label="PayloadCreateFragment" >
+        <action
+            android:id="@+id/action_payloadCreateFragment_to_payloadFragment"
+            app:destination="@id/payloadFragment"
+            app:enterAnim="@anim/fragment_close_enter"
+            app:exitAnim="@anim/fragment_close_exit" />
+    </fragment>
 </navigation>
